--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "parcel": "^2.12.0",
-    "postcss": "^8.4.39",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
+    "parcel": "^2.12.0",
     "parcel-bundler": "^1.12.5",
+    "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4"
   }
 }
