--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "axios": "^1.7.2",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
+    "react-collapse": "^5.1.1",
+    "react-collapsed": "^4.1.2",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "buffer": "^6.0.3",
