--- a/package.json
+++ b/package.json
@@ -5,26 +5,25 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
-  "author": "",
+  "author": "Ashutosh",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
-    "react": "^18.3.1",
-    "react-circular-progressbar": "^2.1.0",
-    "react-collapse": "^5.1.1",
-    "react-collapsed": "^4.1.2",
-    "react-dom": "^18.3.1",
-    "react-player": "^2.16.0",
-    "react-router-dom": "^6.24.1",
-    "react-toastify": "^10.0.5"
+        "react": "^18.3.1",
+        "react-circular-progressbar": "^2.1.0",
+        "react-collapse": "^5.1.1",
+        "react-dom": "^18.3.1",
+        "react-player": "^2.16.0",
+        "react-router-dom": "^6.24.1",
+        "react-toastify": "^10.0.5"
+
   },
   "devDependencies": {
-    "buffer": "^6.0.3",
     "parcel": "^2.12.0",
-    "parcel-bundler": "^1.12.5",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "process": "0.11.10"
   }
 }
