--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
   "author": "Ashutosh",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
-        "react": "^18.3.1",
-        "react-circular-progressbar": "^2.1.0",
-        "react-collapse": "^5.1.1",
-        "react-dom": "^18.3.1",
-        "react-player": "^2.16.0",
-        "react-router-dom": "^6.24.1",
-        "react-toastify": "^10.0.5"
-
+    "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
+    "react-collapse": "^5.1.1",
+    "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
+    "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
     "parcel": "^2.12.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "process": "0.11.10"
+    "process": "0.11.10",
+    "tailwindcss": "^3.4.3"
   }
 }
